static/css/style.css
/* ... */
#group_slug_domain {
    font-family: helvetica;
    font-size: 12px;
    color: #333;
    position: absolute;
    top: 31px;
    left: 0; }
#group_slug_address { margin-left: 150px; width: 170px; }
.group_image, .group_details { float: left; }
.membership_request { list-style: disc inside; }
.membership_tools {  font-weight: bold; margin-left: 30px; }
.group_details { padding-left: 10px; }
.group_list {margin:0px; padding:0px; list-style-type: none; height:100%; overflow:auto;}
.group_list li{ float:left; width:189px; margin:0px 18px 0px 0; height:72px;}
.group_list_thumb { float:left; margin-right:8px;}
.group_list_name {float:left; width:130px;}
th.header {  
    cursor: pointer;
    background-repeat: no-repeat; 
    background-position: center left; 
    padding-left: 20px; 
    border-right: 1px solid #dad9c7; 
    margin-left: -1px; }
th.headerSortUp, th.headerSortDown { background-color: #3399FF;}
.search_title { margin-top: 30px; }
.group_disc_reply_count {float:right;}
.group_disc_box_links {position:absolute; top:0px; right:23px;}

/* ---------------------------------------------------------------------------------------------------------------------
Search Widget Search Widget Search Widget Search Widget Search Widget Search Widget Search Widget Search Widget Search
--------------------------------------------------------------------------------------------------------------------- */
/*
.search_fields { width: 100%; }
.search_widget label.inside { display: block; top: 16px; left: 11px; }
.search_widget .search_value {width: 62%; }
.search_widget li { list-style: none; display: block; margin-bottom: 10px; }
.search_widget .search_results { 
    border: 2px solid #A1D3E4; 
    overflow: auto; 
    width: 100%; 
    height: 250px; 
    margin-top: 5px; 
    padding: 5px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
}
*/

/* ---------------------------------------------------------------------------------------------------------------------
Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags Tags 
--------------------------------------------------------------------------------------------------------------------- */
.tag_cloud { list-style: none; }
.tag_cloud li {margin-top:10px;}
.tag { 
    padding: 7px 14px !important;
    border:1px solid #FFF;
    background-color: #FFF;
    text-transform: uppercase;
    color: #c0c0c0 !important;
    font-weight: bold;
    font-size: 0.7em; 
    padding: 2px 4px; 
    -moz-border-radius: 5px; 
    -webkit-border-radius: 5px; 
    border-radius: 5px; }
a.tag:hover { border:1px solid #c0c0c0; color: #c0c0c0; }

/* ---------------------------------------------------------------------------------------------------------------------
Records Records Records Records Records Records Records Records Records Records Records Records Records Records Records 
--------------------------------------------------------------------------------------------------------------------- */
.activity_item { margin-bottom: 18px; }

/* ---------------------------------------------------------------------------------------------------------------------
Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged 
--------------------------------------------------------------------------------------------------------------------- */
.flag_label[class~="ui-state-disabled"] { opacity: 1; filter:alpha(opacity=100); }

/* ---------------------------------------------------------------------------------------------------------------------
Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire 
--------------------------------------------------------------------------------------------------------------------- */
#vampire_worksheet { position: relative; }
ul#vampire_worksheet_wizard_nav {
    display: none;
    background-color:#FFF;
    position: absolute;
    right: 0;
    z-index: 1; 
    margin-left: 0px;
    padding-left: 0px;
    padding-bottom: 0px; }
#vampire_worksheet_wizard_nav li { 
    float: left;
    list-style: none;
    margin: 3px;
    cursor: pointer; }
#vampire_worksheet_wizard_nav li a { text-decoration: none; }
#vampire_worksheet_wizard_nav li.active a { color:#333; font-weight:bold;}
#vampire_worksheet_wizard {
    height: 324px;
    position: relative;
    overflow: hidden;
    clear: both; }
#vampire_worksheet_wizard ul.items { 
    width: 20000em;
    clear: both;
    position: absolute;
    margin-left: 0px; padding-left: 0px; padding-bottom:18px;}
#vampire_directions li { list-style: disc; }
#vampire_worksheet_wizard .worksheet { width: 432px; float: left; list-style: none; }
#vampire_worksheet_wizard .vampire_device_image { float: left; }
#vampire_worksheet_wizard .vampire_savings_container { float: left; }
#vampire_worksheet_wizard .vampire_savings {  font-weight: bold; }
#vampire_worksheet_wizard .buttonset { margin-left: 0px; padding-bottom: 0px; padding-left: 0px; }
#vampire_worksheet_wizard .device_button { list-style: none; font-size: 12px; float: left; }
#vampire_worksheet_wizard .buttonset .ui-button-text { height: 50px; width: 76px; display: table-cell; vertical-align: middle; }
#vampire_worksheet_wizard .slayer_help_wrapper { font-weight: bold; text-align: center; }
#vampire_worksheet_wizard .slayer_recommended { font-weight: bold; color: #92C139; text-align: center; }
#vampire_plan .col-1 { width: 150px; }

/* ---------------------------------------------------------------------------------------------------------------------
Events Events Events Events Events Events Events Events Events Events Events Events Events Events Events Events Events 
--------------------------------------------------------------------------------------------------------------------- */
#event_manager_nav li { display: inline; }
/* ... */

